--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Hệ thống quản lý chiến dịch GHN Express" />
-        <link rel="apple-touch-icon" href="android-icon-96x96.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>GHN - Express - Notification</title>
+        <meta name="description" content="Crawl shopee product" />
+        <title>Shopee crawler</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
