--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="description" content="Crawl shopee product" />
-        <title>Shopee crawler</title>
+        <title>Binance tool</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
